chore: fix all tests