@@ -3,9 +3,11 @@ package ru.carbohz.intershop.service.impl;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.*;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.test.StepVerifier;
 import ru.carbohz.intershop.dto.ItemDto;
 import ru.carbohz.intershop.dto.PageableDto;
 import ru.carbohz.intershop.dto.PageableItemsDto;
@@ -16,88 +18,87 @@ import ru.carbohz.intershop.model.Item;
 import ru.carbohz.intershop.model.SortOption;
 import ru.carbohz.intershop.repository.CartRepository;
 import ru.carbohz.intershop.repository.ItemRepository;
-import ru.carbohz.intershop.service.PageableService;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.when;
 
 @SpringJUnitConfig(classes = {
-        ItemServiceImpl.class,
         ItemMapper.class,
-        PageableService.class,
+        ItemServiceImpl.class,
 })
 class ItemServiceImplTest {
 
+    @MockitoBean
+    private ItemRepository itemRepository;
+
+    @MockitoBean
+    private CartRepository cartRepository;
+
     @Autowired
-    ItemServiceImpl itemService;
-
-    @MockitoBean
-    ItemRepository itemRepository;
-
-    @MockitoBean
-    CartRepository cartRepository;
+    private ItemServiceImpl itemService;
 
     @Test
     void findItemById_whenCartPresent() {
-        Item item = createItem();
-
+        Item item = createItem(1L);
         Cart cart = new Cart();
         cart.setId(1L);
         cart.setCount(2L);
-        cart.setItem(item);
+        cart.setItemId(item.getId());
 
-        when(itemRepository.findById(1L)).thenReturn(Optional.of(item));
-        when(cartRepository.findByItem_Id(1L)).thenReturn(Optional.of(cart));
+        when(itemRepository.findById(1L)).thenReturn(Mono.just(item));
+        when(cartRepository.findByItem_Id(1L)).thenReturn(Mono.just(cart));
 
-        ItemDto itemDto = itemService.findItemById(1L);
-        assertThat(itemDto.getId()).isEqualTo(1L);
-        assertThat(itemDto.getTitle()).isEqualTo("Title 1");
-        assertThat(itemDto.getDescription()).isEqualTo("Description 1");
-        assertThat(itemDto.getImgPath()).isEqualTo("ImagePath 1");
-        assertThat(itemDto.getCount()).isEqualTo(2L);
-        assertThat(itemDto.getPrice()).isEqualTo(1337L);
+        Mono<ItemDto> result = itemService.findItemById(1L);
 
-        verify(itemRepository, times(1)).findById(1L);
-        verifyNoMoreInteractions(itemRepository);
-        verify(cartRepository, times(1)).findByItem_Id(1L);
-        verifyNoMoreInteractions(cartRepository);
+        StepVerifier.create(result)
+                .assertNext(itemDto -> {
+                    assertThat(itemDto.getId()).isEqualTo(1L);
+                    assertThat(itemDto.getTitle()).isEqualTo("Title 1");
+                    assertThat(itemDto.getDescription()).isEqualTo("Description 1");
+                    assertThat(itemDto.getImgPath()).isEqualTo("ImagePath 1");
+                    assertThat(itemDto.getCount()).isEqualTo(2L);
+                    assertThat(itemDto.getPrice()).isEqualTo(1337L);
+                })
+                .verifyComplete();
     }
 
     @Test
     void findItemById_whenCartNotPresent() {
-        Item item = createItem();
+        Item item = createItem(1L);
 
-        when(itemRepository.findById(1L)).thenReturn(Optional.of(item));
-        when(cartRepository.findByItem_Id(1L)).thenReturn(Optional.empty());
+        when(itemRepository.findById(1L)).thenReturn(Mono.just(item));
+        when(cartRepository.findByItem_Id(1L)).thenReturn(Mono.empty());
 
-        ItemDto itemDto = itemService.findItemById(1L);
-        assertThat(itemDto.getId()).isEqualTo(1L);
-        assertThat(itemDto.getTitle()).isEqualTo("Title 1");
-        assertThat(itemDto.getDescription()).isEqualTo("Description 1");
-        assertThat(itemDto.getImgPath()).isEqualTo("ImagePath 1");
-        assertThat(itemDto.getCount()).isNull();
-        assertThat(itemDto.getPrice()).isEqualTo(1337L);
+        Mono<ItemDto> result = itemService.findItemById(1L);
 
-        verify(itemRepository, times(1)).findById(1L);
-        verifyNoMoreInteractions(itemRepository);
-        verify(cartRepository, times(1)).findByItem_Id(1L);
-        verifyNoMoreInteractions(cartRepository);
+        StepVerifier.create(result)
+                .assertNext(itemDto -> {
+                    assertThat(itemDto.getId()).isEqualTo(1L);
+                    assertThat(itemDto.getTitle()).isEqualTo("Title 1");
+                    assertThat(itemDto.getDescription()).isEqualTo("Description 1");
+                    assertThat(itemDto.getImgPath()).isEqualTo("ImagePath 1");
+                    assertThat(itemDto.getCount()).isZero();
+                    assertThat(itemDto.getPrice()).isEqualTo(1337L);
+                })
+                .verifyComplete();
     }
 
     @Test
     void findItemById_whenItemNotFound_throwsItemNotFoundException() {
-        when(itemRepository.findById(1L)).thenReturn(Optional.empty());
+        when(itemRepository.findById(1L)).thenReturn(Mono.empty());
 
-        assertThatThrownBy(() -> itemService.findItemById(1L))
-                .isInstanceOf(ItemNotFoundException.class)
-                .hasMessage("Item with id 1 not found");
+        Mono<ItemDto> result = itemService.findItemById(1L);
 
-        verify(itemRepository, times(1)).findById(1L);
-        verifyNoMoreInteractions(itemRepository);
-        verifyNoInteractions(cartRepository);
+        StepVerifier.create(result)
+                .expectErrorMatches(throwable ->
+                        throwable instanceof ItemNotFoundException &&
+                        throwable.getMessage().equals("Item with id 1 not found"))
+                .verify();
     }
 
     @Nested
@@ -111,52 +112,39 @@ class ItemServiceImplTest {
 
             List<Item> items = createItems();
 
-            when(itemRepository.findByTitleContainingOrDescriptionContainingAllIgnoreCase(any(), any(), any()))
-                    .thenReturn(items);
-            when(itemRepository.count()).thenReturn(20L);
+            when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
+                    anyString(), anyInt(), anyLong()))
+                    .thenReturn(Flux.fromIterable(items));
+            when(itemRepository.countByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(anyString()))
+                    .thenReturn(Mono.just(20L));
+            when(cartRepository.findByItem_Id(anyLong())).thenReturn(Mono.empty());
 
-            when(cartRepository.findByItem_Id(anyLong())).thenReturn(Optional.empty());
+            Mono<PageableItemsDto> result = itemService.getPageableItems(search, sortOption, pageSize, pageNumber);
 
-            PageableItemsDto pageableItemsDto = itemService.getPageableItems(search, sortOption, pageSize, pageNumber);
+            StepVerifier.create(result)
+                    .assertNext(dto -> {
+                        PageableDto paging = dto.getPageable();
+                        assertThat(paging.pageNumber()).isEqualTo(pageNumber);
+                        assertThat(paging.pageSize()).isEqualTo(pageSize);
+                        assertThat(paging.hasNext()).isFalse();
+                        assertThat(paging.hasPrevious()).isFalse();
 
-            PageableDto pageableDto = pageableItemsDto.getPageable();
-            assertThat(pageableDto.hasNext()).isFalse();
-            assertThat(pageableDto.hasPrevious()).isFalse();
-            assertThat(pageableDto.pageNumber()).isEqualTo(pageNumber);
-            assertThat(pageableDto.pageSize()).isEqualTo(pageSize);
+                        List<List<ItemDto>> itemGroups = dto.getItems();
+                        assertThat(itemGroups).hasSize(4);
 
-            List<List<ItemDto>> itemDtos = pageableItemsDto.getItems();
-            assertThat(itemDtos).hasSize(4);
-            List<ItemDto> firstItemDto = itemDtos.getFirst();
-            assertThat(firstItemDto)
-                    .hasSize(5)
-                    .isSortedAccordingTo(Comparator.comparingLong(ItemDto::getId));
-            List<ItemDto> lastItemDto = itemDtos.getLast();
-            assertThat(lastItemDto)
-                    .hasSize(5)
-                    .isSortedAccordingTo(Comparator.comparingLong(ItemDto::getId));
-            ItemDto firstDto = firstItemDto.getFirst();
-            assertThat(firstDto.getId()).isEqualTo(1L);
-            assertThat(firstDto.getTitle()).isEqualTo("Title 1");
-            assertThat(firstDto.getDescription()).isEqualTo("Description 1");
-            assertThat(firstDto.getImgPath()).isEqualTo("ImagePath 1");
-            assertThat(firstDto.getCount()).isNull();
-            assertThat(firstDto.getPrice()).isEqualTo(1337L);
+                        // Verify first group
+                        List<ItemDto> firstGroup = itemGroups.get(0);
+                        assertThat(firstGroup).hasSize(5);
+                        assertThat(firstGroup)
+                                .isSortedAccordingTo(Comparator.comparingLong(ItemDto::getId));
 
-            ItemDto lastDto = lastItemDto.getLast();
-            assertThat(lastDto.getId()).isEqualTo(20L);
-            assertThat(lastDto.getTitle()).isEqualTo("Title 20");
-            assertThat(lastDto.getDescription()).isEqualTo("Description 20");
-            assertThat(lastDto.getImgPath()).isEqualTo("ImagePath 20");
-            assertThat(lastDto.getCount()).isNull();
-            assertThat(lastDto.getPrice()).isEqualTo(1337L * 20L);
-
-            verify(itemRepository, times(1)).findByTitleContainingOrDescriptionContainingAllIgnoreCase(any(), any(), any());
-            verify(itemRepository, times(1)).count();
-            verifyNoMoreInteractions(itemRepository);
-
-            verify(cartRepository, times(20)).findByItem_Id(anyLong());
-            verifyNoMoreInteractions(cartRepository);
+                        // Verify last group
+                        List<ItemDto> lastGroup = itemGroups.get(3);
+                        assertThat(lastGroup).hasSize(5);
+                        assertThat(lastGroup)
+                                .isSortedAccordingTo(Comparator.comparingLong(ItemDto::getId));
+                    })
+                    .verifyComplete();
         }
 
         @Test
@@ -168,54 +156,37 @@ class ItemServiceImplTest {
 
             List<Item> items = createItems();
 
-            Page<Item> mockPage = new PageImpl<>(items);
+            when(itemRepository.findAll(anyInt(), anyLong()))
+                    .thenReturn(Flux.fromIterable(items));
+            when(itemRepository.count()).thenReturn(Mono.just(20L));
+            when(cartRepository.findByItem_Id(anyLong())).thenReturn(Mono.empty());
 
-            PageRequest pageable = PageRequest.of(pageNumber - 1, pageSize, Sort.unsorted());
-            when(itemRepository.findAll(pageable)).thenReturn(mockPage);
-            when(itemRepository.count()).thenReturn(20L);
+            Mono<PageableItemsDto> result = itemService.getPageableItems(search, sortOption, pageSize, pageNumber);
 
-            when(cartRepository.findByItem_Id(anyLong())).thenReturn(Optional.empty());
+            StepVerifier.create(result)
+                    .assertNext(dto -> {
+                        PageableDto paging = dto.getPageable();
+                        assertThat(paging.pageNumber()).isEqualTo(pageNumber);
+                        assertThat(paging.pageSize()).isEqualTo(pageSize);
+                        assertThat(paging.hasNext()).isFalse();
+                        assertThat(paging.hasPrevious()).isFalse();
 
-            PageableItemsDto pageableItemsDto = itemService.getPageableItems(search, sortOption, pageSize, pageNumber);
+                        List<List<ItemDto>> itemGroups = dto.getItems();
+                        assertThat(itemGroups).hasSize(4);
 
-            PageableDto pageableDto = pageableItemsDto.getPageable();
-            assertThat(pageableDto.hasNext()).isFalse();
-            assertThat(pageableDto.hasPrevious()).isFalse();
-            assertThat(pageableDto.pageNumber()).isEqualTo(pageNumber);
-            assertThat(pageableDto.pageSize()).isEqualTo(pageSize);
+                        // Verify first item
+                        ItemDto firstDto = itemGroups.get(0).get(0);
+                        assertThat(firstDto.getId()).isEqualTo(1L);
+                        assertThat(firstDto.getTitle()).isEqualTo("Title 1");
+                        assertThat(firstDto.getPrice()).isEqualTo(1337L);
 
-            List<List<ItemDto>> itemDtos = pageableItemsDto.getItems();
-            assertThat(itemDtos).hasSize(4);
-            List<ItemDto> firstItemDto = itemDtos.getFirst();
-            assertThat(firstItemDto)
-                    .hasSize(5)
-                    .isSortedAccordingTo(Comparator.comparingLong(ItemDto::getId));
-            List<ItemDto> lastItemDto = itemDtos.getLast();
-            assertThat(lastItemDto)
-                    .hasSize(5)
-                    .isSortedAccordingTo(Comparator.comparingLong(ItemDto::getId));
-            ItemDto firstDto = firstItemDto.getFirst();
-            assertThat(firstDto.getId()).isEqualTo(1L);
-            assertThat(firstDto.getTitle()).isEqualTo("Title 1");
-            assertThat(firstDto.getDescription()).isEqualTo("Description 1");
-            assertThat(firstDto.getImgPath()).isEqualTo("ImagePath 1");
-            assertThat(firstDto.getCount()).isNull();
-            assertThat(firstDto.getPrice()).isEqualTo(1337L);
-
-            ItemDto lastDto = lastItemDto.getLast();
-            assertThat(lastDto.getId()).isEqualTo(20L);
-            assertThat(lastDto.getTitle()).isEqualTo("Title 20");
-            assertThat(lastDto.getDescription()).isEqualTo("Description 20");
-            assertThat(lastDto.getImgPath()).isEqualTo("ImagePath 20");
-            assertThat(lastDto.getCount()).isNull();
-            assertThat(lastDto.getPrice()).isEqualTo(1337L * 20L);
-
-            verify(itemRepository, times(1)).findAll(pageable);
-            verify(itemRepository, times(1)).count();
-            verifyNoMoreInteractions(itemRepository);
-
-            verify(cartRepository, times(20)).findByItem_Id(anyLong());
-            verifyNoMoreInteractions(cartRepository);
+                        // Verify last item
+                        ItemDto lastDto = itemGroups.get(3).get(4);
+                        assertThat(lastDto.getId()).isEqualTo(20L);
+                        assertThat(lastDto.getTitle()).isEqualTo("Title 20");
+                        assertThat(lastDto.getPrice()).isEqualTo(1337L * 20L);
+                    })
+                    .verifyComplete();
         }
 
         private List<Item> createItems() {
@@ -223,32 +194,17 @@ class ItemServiceImplTest {
             for (long i = 1; i <= 20L; i++) {
                 items.add(createItem(i));
             }
-
             return items;
-        }
-
-        private Item createItem(long i) {
-            Item item = new Item();
-
-            item.setId(i);
-            item.setTitle("Title " + i);
-            item.setDescription("Description " + i);
-            item.setImagePath("ImagePath " + i);
-            item.setPrice(1337L * i);
-
-            return item;
         }
     }
 
-    private Item createItem() {
+    private Item createItem(long id) {
         Item item = new Item();
-
-        item.setId(1L);
-        item.setTitle("Title 1");
-        item.setDescription("Description 1");
-        item.setImagePath("ImagePath 1");
-        item.setPrice(1337L);
-
+        item.setId(id);
+        item.setTitle("Title " + id);
+        item.setDescription("Description " + id);
+        item.setImagePath("ImagePath " + id);
+        item.setPrice(1337L * id);
         return item;
     }
 }
